src/assets/styles/timesheet.scss
.timesheet {
  .options {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-bottom: 20px;
    // h3 {
    //   color: $primary-color;
    //   font-size: 27px;
    //   font-weight: 700;
    //   margin-bottom: 0;
    // }
  }
  
  .timesheet-data {
    border: 1px solid #B7B7B7;
    border-radius: 13px;
    height: calc(100vh - 220px);
    @media (max-height: 600px) {
      height: calc(100vh - 158px);
    }
    .timesheet-flex {
      display: flex;
      height: 100%;
      .timesheet-status {
        width: 33.333333%;
        border-right: 1px solid #B7B7B7;
        &:last-child {
          border-right: none;
        }
        .timesheet-header {
          padding: 14px 0px 17px 0px;
          border-bottom: 1px solid #B7B7B7;
          .txt {
            text-align: center;
            font-size: 25px;
            color: #272725;
            font-weight: 600;
            margin-bottom: 0;
          }
        }
        .timesheet-content {
          height: calc(100% - 82px);
          overflow-y: auto;
          @media (max-width: 820px) {
            height: calc(100% - 176px);
            padding-bottom: 18px;
          }
          .status-card {
            margin: 8px;
            border-radius: 10px;
            padding: 18px 14px 16px 20px;
            // border: 1px solid #7D7D7D;
            box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
            margin: 14px 18px 20px 18px;
            > p {
              font-size: 16px;
              color: #272725;
              font-weight: 400;
            }
            .btn-flex {
              display: flex;
              justify-content: space-between;
              align-items: center;
              margin: 20px 0px 5px 0px;
              @media (max-width: 1024px) {
                display: block;
              }
              .open {
                @media (max-width: 1024px) {
                  width: 130px;
                  margin-bottom: 10px;
                }
                @media (max-width: 768px) {
                  width: 100px;
                  text-align: center;
                  margin-bottom: 10px;
                  padding: 0;
                }
              }
              .submit {
                border: 1px solid #000;
                color: #000;
                @media (max-width: 1024px) {
                  width: 130px;
                }
                @media (max-width: 768px) {
                  width: 100px;
                  padding: 0;
                  text-align: center;
                  margin-bottom: 10px;
                }
              }
            }
          }
        }
        .new-btn {
          border: 1px solid #000;
          margin-right: 8px;
          color: #000;
          margin-top: 18px;
          @media (max-width: 820px) {
            height: 60px;
            margin: 40px 8px;
          }
        }
      }
    }
    
  }
  .save-btn {
    margin-top: 20px;
  }
}

